--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   get: ^4.7.2
   flutter_svg: ^2.1.0
   flutter_xlider: ^3.5.0
+  dartz: ^0.10.1
+  dio: ^5.8.0+1
+  get_storage: ^2.1.1
+  file_picker: ^10.1.4
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
