--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_storage: ^2.1.1
   file_picker: ^10.1.4
   permission_handler: ^12.0.0+1
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
