--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   file_picker: ^10.1.4
   permission_handler: ^12.0.0+1
   pinput: ^5.0.1
+  flutter_animate: ^4.5.2
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +73,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/svg/
-
+    - assets/animations/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
 
